--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1 id="title">My form exercise</h1>
-  <p id="description">questo è un form di esercitazione (login) di un sito per gamer</p>
+  <p id="description">Esercizio form login</p>
   
   <!-- inizio del form di registrazione del sito -->
   <form action="text" id="survey-form" name="survey-form">
@@ -44,7 +44,7 @@
       <label for="nintendo-switch"><input id="nintendo-switch" type="radio" name="console" class="console" value="nintendo-switch"> Nintendo Switch</label>
     </fieldset>
   
-    <!-- fouth fieldset -->
+    <!-- fourth fieldset -->
     <fieldset>
       <legend>Scegli il tuo genere di videogiochi preferito:</legend>
       <label for="genre">
